@@ -5,6 +5,8 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Vector;
 
+import javax.microedition.khronos.opengles.GL10;
+
 import org.xmlpull.v1.XmlPullParser;
 import org.xmlpull.v1.XmlPullParserException;
 
@@ -16,12 +18,7 @@ import com.flexymind.labirynth.objects.FINISH;
 
 import android.content.Context;
 import android.content.res.XmlResourceParser;
-import android.graphics.Bitmap;
-import android.graphics.Canvas;
-import android.graphics.Matrix;
-import android.graphics.Paint;
-import android.graphics.Point;
-import android.graphics.drawable.BitmapDrawable;
+import android.graphics.PointF;
 import android.graphics.drawable.Drawable;
 import android.hardware.SensorManager;
 
@@ -32,32 +29,34 @@ import android.hardware.SensorManager;
 public class LevelStorage {
 
 	private static final String LEVEL		= "level";
+	private static final String SCORE		= "score";
+	private static final String SCORE1STAR	= "sc1star";
+	private static final String SCORE2STAR	= "sc2star";
+	private static final String SCORE3STAR	= "sc3star";
 	private static final String BALL		= "ball";
 	private static final String WALL		= "wall";
 	private static final String FINISH		= "finish";
-	private static final String FREE		= "isFree";
 	private static final String DRAWABLE	= "drawable";
 	private static final String PROP_DIAM 	= "D";
 	private static final String PROP_X1		= "X1";
 	private static final String PROP_X2		= "X2";
-	private static final String PROP_X3		= "X3";
 	private static final String PROP_Y1		= "Y1";
 	private static final String PROP_Y2		= "Y2";
-	private static final String PROP_Y3		= "Y3";
 	private static final String PROP_X		= "X";
 	private static final String PROP_Y		= "Y";
+	private static final String PROP_SOFT	= "Y";
 	private static final String ATTR_NAME	= "name";
 	
 	private Map<String,String> drawablenames = new HashMap<String,String>();
-	private Map<String,Boolean> frees = new HashMap<String,Boolean>();
 	private Vector<String> names = new Vector<String>();
-	
+	private static int numNames;
 	private Context context;
 	
 	/** 
 	 * Конструктор класса
 	 */
 	public LevelStorage(Context cont){
+		numNames = 0;
 		context = cont;
 		parseXML();
 	}
@@ -80,9 +79,6 @@ public class LevelStorage {
 					}
 					xml.next();
 					while(xml.getDepth() > deep){
-						if (FREE.equals(xml.getName())){
-							frees.put(name, new Boolean(xml.nextText()));
-						}
 						if (DRAWABLE.equals(xml.getName())){
 							drawablenames.put(name, xml.nextText());
 						}
@@ -98,7 +94,14 @@ public class LevelStorage {
 		}finally{
 			xml.close();
 		}
-		
+		numNames = names.size();
+	}
+	
+	/**
+	 * @return количество уровней в базе данных
+	 */
+	public static int getNumOfLevels(){
+		return numNames;
 	}
 	
 	/**
@@ -128,26 +131,12 @@ public class LevelStorage {
 	}
 	
 	/**
-	 * возвращает доступность уровня
-	 * @param name - название уровня
-	 * @return true если уровень доступен, false в другом случае
-	 */
-	public boolean isFree(String name){
-		if (frees.containsKey(name)){
-			return frees.get(name);
-		}
-		return false;
-	}
-	
-	/**
 	 * Загружает из xml файла обьект GameLevel
 	 * @param <code>String name<code> - имя уровня
+	 * @param <code>GL10 gl<code> - OpenGL объект для рисования
 	 * @return <code>GameLevel</code>, загруженный из базы
 	 */
-	public GameLevel loadGameLevelbyName(String name){
-//[review] mandrigin: almos duplicate code here -- refactor!
-//also, parse XML's everytime is not efficient -- maybe parse it one time and
-//create a Map<String, GameLevel>?
+	public GameLevel loadGameLevelbyName(GL10 gl, String name){
 		GameLevel game = null;
 		XmlResourceParser xml = context.getResources().getXml(R.xml.levels);
 		try {
@@ -156,7 +145,7 @@ public class LevelStorage {
 					for (int i = 0; i < xml.getAttributeCount(); i++){
 						if ( ATTR_NAME.equals(xml.getAttributeName(i)) ){
 							if (xml.getAttributeValue(i).equals(name) ){
-								game = loadGameLevelfromXml(xml);
+								game = loadGameLevelfromxml(gl, xml);
 							}
 						}
 					}
@@ -180,20 +169,23 @@ public class LevelStorage {
 	 * @param <code>XmlResourceParser xml<code> - xml файл из базы, указывающий на level
 	 * @return <code>GameLevel</code>, загруженный из базы
 	 */
-	private GameLevel loadGameLevelfromXml(XmlResourceParser xml){
+	private GameLevel loadGameLevelfromxml(GL10 gl, XmlResourceParser xml){
 		GameLevel game = null;
 		Vector<Wall> walls = new Vector<Wall>();
 		Wall twall     = null;
 		Ball tball     = null;
 		FINISH tfinish = null;
+		float softness = 0.7f;
+		int score	= 0,
+			sc1Star	= 0,
+			sc2Star	= 0,
+			sc3Star	= 0;
 		int x1		= 0,
 			x2		= 0,
 			y1		= 0,
 			y2		= 0,
 			d		= 0,
 			deep	= 0,
-			x3		= 0,
-			y3		= 0,
 			finX	= 0,
 			finY	= 0,
 			finDiam = 0;
@@ -201,139 +193,93 @@ public class LevelStorage {
 //[review] mandrigin: very large try...catch block!
 		try {
 			while (xml.next() != XmlPullParser.END_DOCUMENT){
+				if (SCORE.equals(xml.getName())){
+					score = Integer.valueOf(xml.nextText());
+				}
+				if (SCORE1STAR.equals(xml.getName())){
+					sc1Star = Integer.valueOf(xml.nextText());
+				}
+				if (SCORE2STAR.equals(xml.getName())){
+					sc2Star = Integer.valueOf(xml.nextText());
+				}
+				if (SCORE3STAR.equals(xml.getName())){
+					sc3Star = Integer.valueOf(xml.nextText());
+				}
 				if (BALL.equals(xml.getName())){
 					deep = xml.getDepth();
 					xml.next();
 					while(xml.getDepth() > deep){
 						if (PROP_X.equals(xml.getName())){
-							x1 = new Integer(xml.nextText());
+							x1 = Integer.valueOf(xml.nextText());
 						}
 						if (PROP_Y.equals(xml.getName())){
-							y1 = new Integer(xml.nextText());
+							y1 = Integer.valueOf(xml.nextText());
 						}
 						if (PROP_DIAM.equals(xml.getName())){
-							d = new Integer(xml.nextText());
+							d = Integer.valueOf(xml.nextText());
 						}
 						xml.next();
 					}
 					// загрузка шара с текстурой ball
-					tball = new Ball(	context.getResources().getDrawable(R.drawable.ball2),
-										new Point(x1, y1), 
+					tball = new Ball(	gl,
+										context.getResources().getDrawable(R.drawable.ball2),
+										new PointF(x1, y1), 
 										d,
 										(SensorManager)context.getSystemService(Context.SENSOR_SERVICE));
 				}
-				
-				if (WALL.equals(xml.getName())){
-					deep = xml.getDepth();
-					xml.next();
-					while(xml.getDepth() > deep){
-						if (PROP_X1.equals(xml.getName())){
-							x1 = new Integer(xml.nextText());
-						}
-						if (PROP_Y1.equals(xml.getName())){
-							y1 = new Integer(xml.nextText());
-						}
-						if (PROP_X2.equals(xml.getName())){
-							x2 = new Integer(xml.nextText());
-						}
-						if (PROP_Y2.equals(xml.getName())){
-							y2 = new Integer(xml.nextText());
-						}
-						if (PROP_X3.equals(xml.getName())){
-							x3 = new Integer(xml.nextText());
-						}
-						if (PROP_Y3.equals(xml.getName())){
-							y3 = new Integer(xml.nextText());
-						}
-						xml.next();
-					}
-					Drawable texture = context.getResources().getDrawable(R.drawable.stenka2);
-					
-					Bitmap bmp = ((BitmapDrawable)texture).getBitmap();
-					bmp = Bitmap.createScaledBitmap(bmp, (int)(Math.sqrt((x2-x3)*(x2-x3)+(y2-y3)*(y2-y3))), (int)Math.sqrt((x2-x1)*(x2-x1)+(y2-y1)*(y2-y1)), true);
-					
-					int max = bmp.getHeight() > bmp.getWidth() ? bmp.getHeight() : bmp.getWidth();
-					
-					Bitmap textbmp = Bitmap.createBitmap(max, max, Bitmap.Config.ARGB_8888);
-					Canvas canv = new Canvas(textbmp);
-					
-					Paint p = new Paint();
-					
-					// угол поворота текстуры
-					float angle, centang;
-					int x = - y1 + y2;
-					int y = x1 - x2;
-					
-					Point	shift	= new Point((max - bmp.getWidth() ) / 2, (max - bmp.getHeight()) / 2);
-					float shiftleng;
-					Point cent = new Point(max / 2, max / 2);
-					
-					shift.x -= cent.x;
-					shift.y -= cent.y;
-					shiftleng = (float)Math.sqrt((shift.x)*(shift.x)+(shift.y)*(shift.y));
-					
-					// угол поворота вектора от центра до point1
-					centang = (float)Math.acos( shift.x / shiftleng);
-					if (shift.y < 0){
-						centang = 2 * (float)Math.PI - centang;
-					}
-					// угол поворота текстуры
-					angle = (float)Math.acos( x / Math.sqrt(x * x + y * y));
-					if (y < 0){
-						angle = 2 * (float)Math.PI - angle;
-					}
-					centang += angle;
-					angle *= 360f / 2 / (float)Math.PI;
-					
-					shift.x = (int)(shiftleng * Math.cos(centang));
-					shift.y = (int)(shiftleng * Math.sin(centang));
-					
-					// расстояние до точки p1
-					shift.x += cent.x;
-					shift.y += cent.y;
-					
-					Matrix 	matrix	= new Matrix();
-
-					matrix.setTranslate( (max - bmp.getWidth()) / 2, (max - bmp.getHeight()) / 2);
-					matrix.postRotate(angle, max / 2, max / 2);
-
-					p = new Paint();
-					p.setFilterBitmap(true);
-					
-					canv.drawBitmap(bmp, matrix, p);
-
-					bmp.recycle();
-					
-					// загрузка стены с текстурой stenka
-					twall = new Wall(	textbmp,
-										new Point(x1, y1), 
-										new Point(x2, y2), 
-										new Point(x3, y3),
-										shift,
-										0.70f);
-					walls.add(twall);
-				}
-				
 				if (FINISH.equals(xml.getName())){
 					deep = xml.getDepth();
 					xml.next();
 					while(xml.getDepth() > deep){
 						if (PROP_X.equals(xml.getName())){
-							finX = new Integer(xml.nextText());
+							finX = Integer.valueOf(xml.nextText());
 						}
 						if (PROP_Y.equals(xml.getName())){
-							finY = new Integer(xml.nextText());
+							finY = Integer.valueOf(xml.nextText());
 						}
 						if (PROP_DIAM.equals(xml.getName())){
-							finDiam = new Integer(xml.nextText());
+							finDiam = Integer.valueOf(xml.nextText());
 						}
 						xml.next();
 					}
+					// загрузка  Объекта финиш, с текстурой
+					tfinish = new FINISH (	gl,
+											context.getResources().getDrawable(R.drawable.finish),
+											new PointF(finX, finY), 
+											finDiam);
 				}
-				// загрузка  Объекта финиш, с текстурой
-				tfinish = new FINISH (	context.getResources().getDrawable(R.drawable.finish),
-									new Point(finX, finY), 
-									finDiam);
+				if (WALL.equals(xml.getName())){
+					softness = 0.7f;
+					deep = xml.getDepth();
+					xml.next();
+					while(xml.getDepth() > deep){
+						if (PROP_X1.equals(xml.getName())){
+							x1 = Integer.valueOf(xml.nextText());
+						}
+						if (PROP_Y1.equals(xml.getName())){
+							y1 = Integer.valueOf(xml.nextText());
+						}
+						if (PROP_X2.equals(xml.getName())){
+							x2 = Integer.valueOf(xml.nextText());
+						}
+						if (PROP_Y2.equals(xml.getName())){
+							y2 = Integer.valueOf(xml.nextText());
+						}
+						if (PROP_SOFT.equals(xml.getName())){
+							softness = Float.valueOf(xml.nextText());
+						}
+						xml.next();
+					}
+					Drawable texture = context.getResources().getDrawable(R.drawable.wall);
+
+					// загрузка стены с текстурой stenka
+					twall = new Wall(	gl,
+										texture,
+										new PointF(x1 * (float)Settings.getScaleFactorX(), y1 * (float)Settings.getScaleFactorY()), 
+										new PointF(x2 * (float)Settings.getScaleFactorX(), y2 * (float)Settings.getScaleFactorY()),
+										softness);
+					walls.add(twall);
+				}
 				if ( LEVEL.equals(xml.getName()) ){
 					break;
 				}
@@ -351,7 +297,15 @@ public class LevelStorage {
 		game = new GameLevel(	walls,
 								tball,
 								tfinish,
+								gl,
 								context.getResources().getDrawable(R.drawable.flexy3));
+		
+		if (score 	!= 0 &&
+			sc1Star	!= 0 &&
+			sc2Star	!= 0 &&
+			sc3Star	!= 0){
+			game.setScoreSystem(score, sc1Star, sc2Star, sc3Star);
+		}
 		
 		return game;
 	}
